Forced Base theme mobile view footer to be two columns wide to avoid button truncation.

--- a/src/theme-base/sass/includes/default-mobile.scss
+++ b/src/theme-base/sass/includes/default-mobile.scss
@@ -122,8 +122,23 @@ a {
 #base-sft{
 	padding-bottom:5px;
 	margin-top:5px;
-	li a.ui-btn {
-		font-weight:700;
+	.ui-footer {
+		border:0;
+	}
+	li {
+		a.ui-btn {
+			font-weight:700;
+			margin:0;
+			
+		}
+		&:nth-child(1), &:nth-child(2) {
+			a.ui-btn {
+				border-bottom:0;
+			}
+		}
+		&.ui-block-a a.ui-btn {
+			border-right-width:0;
+		}
 	}
 }
 
